# qc-bot

./: .gitignore  Cargo.toml
data/: config.toml  log.txt  lottery.json  memes.json  money.json  shops.json
env/: config.toml  money.json
env/data/: money.json
src/: TODO.txt  config.rs  file_sys.rs  game.rs  lib.rs  lottery.rs  main.rs  memes.rs  money.rs  rules.rs  scrub.rs  shops.rs  trivia.rs
src/resources/: blacklist.txt
test/: shops.json
