[package]
name = "werewolf_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = true, version = "0.11.2" }
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.81"
serde = "1.0.137"
toml = "0.5.9"